// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert text at end 1`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Basic Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color:#eee;margin-bottom:24px;outline:none;padding:8px;width:300px"
    tabindex="0"
  >
    <div>
      ·ahoj·
    </div>
  </div>
  <pre
    class="jsx-2255726786"
  >
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'ahoj'}]}"
    >
      ·5·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,4],"focus":[0,4]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'aho'}]}"
    >
      ·4·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,3],"focus":[0,3]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'ah'}]}"
    >
      ·3·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,2],"focus":[0,2]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'a'}]}"
    >
      ·2·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,1],"focus":[0,1]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'a'}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0],"focus":[0,0]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'a'}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":true,"selection":null,"tabLostFocus":false}·
    </span>
  </pre>
</div>
`;

exports[`insert text at start then middle 1`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Basic Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color:#eee;margin-bottom:24px;outline:none;padding:8px;width:300px"
    tabindex="0"
  >
    <div>
      ·bla·
    </div>
  </div>
  <pre
    class="jsx-2255726786"
  >
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'bla'}]}"
    >
      ·3·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,2],"focus":[0,2]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'ba'}]}"
    >
      ·2·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,1],"focus":[0,1]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'a'}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0],"focus":[0,0]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'a'}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":true,"selection":null,"tabLostFocus":false}·
    </span>
  </pre>
</div>
`;

exports[`remove text 1`] = `
<div
  id="__next"
>
  <div
    class="jsx-442929638"
  >
    ·Basic Example·
  </div>
  <div
    autocorrect="off"
    contenteditable="true"
    data-gramm="true"
    role="textbox"
    spellcheck="false"
    style="background-color:#eee;margin-bottom:24px;outline:none;padding:8px;width:300px"
    tabindex="0"
  >
    <div>
      ·a·
    </div>
  </div>
  <pre
    class="jsx-2255726786"
  >
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'a'}]}"
    >
      ·3·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0],"focus":[0,0]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'ba'}]}"
    >
      ·2·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,1],"focus":[0,1]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'a'}]}"
    >
      ·1·
      · ·
      ·{"hasFocus":true,"selection":{"anchor":[0,0],"focus":[0,0]},"tabLostFocus":false}·
    </span>
    <span
      class="jsx-1782790912"
      title="{'tag':'div','children':[{'text':'a'}]}"
    >
      ·0·
      · ·
      ·{"hasFocus":true,"selection":null,"tabLostFocus":false}·
    </span>
  </pre>
</div>
`;
